# beat-link-cpp

./: .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  Doxyfile  INSTRUCTION.md  LICENSE.md  PLANS.md  README.md  README_EN.md  README_JA.md
examples/: beat_monitor.py  beatlink_cli.cpp  beatlink_gui.cpp  simple_beat_listener.cpp  track_info.py  waveform_export.py
include/beatlink/: ApiSchema.hpp  Beat.hpp  BeatFinder.hpp  BeatLink.hpp  BeatListener.hpp  CdjStatus.hpp  DeviceAnnouncement.hpp  DeviceAnnouncementListener.hpp  DeviceFinder.hpp  DeviceReference.hpp  DeviceUpdate.hpp  DeviceUpdateListener.hpp  FaderStartListener.hpp  HandlePool.hpp  LifecycleListener.hpp  LifecycleParticipant.hpp  MasterAdapter.hpp  MasterHandoffListener.hpp  MasterListener.hpp  MediaDetails.hpp  MediaDetailsListener.hpp  Metronome.hpp  MixerStatus.hpp  OnAirListener.hpp  PacketTypes.hpp  PlayerSettings.hpp  PrecisePosition.hpp  PrecisePositionListener.hpp  SafetyCurtain.hpp  Snapshot.hpp  Span.hpp  SyncListener.hpp  Util.hpp  VirtualCdj.hpp  VirtualRekordbox.hpp
include/beatlink/data/: AlbumArt.hpp  AlbumArtListener.hpp  AlbumArtUpdate.hpp  AnalysisTag.hpp  AnalysisTagFinder.hpp  AnalysisTagListener.hpp  AnalysisTagUpdate.hpp  AnlzParser.hpp  AnlzTypes.hpp  ArtFinder.hpp  BeatGrid.hpp  BeatGridFinder.hpp  BeatGridListener.hpp  BeatGridUpdate.hpp  ColorItem.hpp  CrateDigger.hpp  CueList.hpp  DataReference.hpp  Database.hpp  DatabaseListener.hpp  DeckReference.hpp  MenuLoader.hpp  MetadataFinder.hpp  MetadataProvider.hpp  MountListener.hpp  OpusProvider.hpp  PdbParser.hpp  PlaybackState.hpp  SQLiteConnection.hpp  SQLiteConnectionListener.hpp  SearchableItem.hpp  SignatureFinder.hpp  SignatureListener.hpp  SignatureUpdate.hpp  SlotReference.hpp  SongStructure.hpp  TimeFinder.hpp  TrackMetadata.hpp  TrackMetadataListener.hpp  TrackMetadataUpdate.hpp  (+11 more)
include/beatlink/dbserver/: BinaryField.hpp  Client.hpp  ConnectionManager.hpp  DataReader.hpp  Field.hpp  Message.hpp  NumberField.hpp  StringField.hpp
include/beatlink/ui/: InvalidateCallback.hpp  OverlayPainter.hpp  WaveformRender.hpp
src/: Beat.cpp  BeatFinder.cpp  CdjStatus.cpp  DeviceAnnouncement.cpp  DeviceFinder.cpp  DeviceUpdate.cpp  MediaDetails.cpp  Metronome.cpp  MixerStatus.cpp  PrecisePosition.cpp  Util.cpp  VirtualCdj.cpp  VirtualRekordbox.cpp  python_bindings.cpp
src/data/: AlbumArt.cpp  AnalysisTagFinder.cpp  AnlzParser.cpp  ArtFinder.cpp  BeatGridFinder.cpp  CrateDigger.cpp  CueList.cpp  MenuLoader.cpp  MetadataFinder.cpp  OpusProvider.cpp  PdbParser.cpp  SignatureFinder.cpp  SlotReference.cpp  SqliteConnection.cpp  TimeFinder.cpp  TrackMetadata.cpp  WaveformDetail.cpp  WaveformFinder.cpp  WaveformPreview.cpp  ZipArchive.cpp
src/dbserver/: BinaryField.cpp  Client.cpp  ConnectionManager.cpp  DataReader.cpp  Field.cpp  Message.cpp  NumberField.cpp  StringField.cpp
tests/: TEST_MANUAL.md  communication_test.py  emulator.py  golden_test.py  real_device_test.py  test_beat.cpp  test_cdj_status.cpp  test_data_structures.cpp  test_main.cpp  test_util.cpp
